prevent application of same instrument for an evaluated

--- a/app/views/evaluation_mailer/send_instrument.html.erb
+++ b/app/views/evaluation_mailer/send_instrument.html.erb
@@ -5,7 +5,7 @@
   <title>Instrumento de Avaliação Disponível</title>
 </head>
 <body>
-  <h1>Hello <%= @evaluation.evaluated.name %>,</h1>
+  <h1>Olá <%= @evaluation.evaluated.name %>,</h1>
   <p>
     Você foi convidado a completar um instrumento. Clique no link abaixo para iniciar sua avaliação.
   </p>
