implements endpoint to confirm user data

--- a/app/views/evaluation_mailer/send_instrument.html.erb
+++ b/app/views/evaluation_mailer/send_instrument.html.erb
@@ -7,7 +7,7 @@
 <body>
   <h5>Olá <%= @evaluation.evaluated.name %>,</h5>
   <p>
-    Você foi convidado a completar o instrumento <b><%= @evaluation.instrument.name %></b>
+    Você recebeu um convite para completar o instrumento <b><%= @evaluation.instrument.name %></b>
   </p>
   <p>
     Clique no link abaixo para iniciar sua avaliação.
